--- a/package.json
+++ b/package.json
@@ -47,8 +47,10 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "file-saver": "^2.0.5",
     "firebase": "^11.4.0",
     "input-otp": "^1.2.4",
+    "jspdf": "^3.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
