Add new dependencies for enhanced functionality and features

--- a/package.json
+++ b/package.json
@@ -42,9 +42,12 @@
     "@radix-ui/react-tooltip": "^1.1.4",
     "@stripe/stripe-js": "^1.54.2",
     "@tanstack/react-query": "^5.56.2",
+    "authenticator": "^1.1.5",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "crypto-browserify": "^3.12.1",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "file-saver": "^2.0.5",
@@ -54,6 +57,8 @@
     "jspdf": "^3.0.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
+    "otplib": "^12.0.1",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.2.0",
